@@ -1,5 +1,5 @@
 /*
- * Copyright 2004-2014 H2 Group. Multiple-Licensed under the MPL 2.0,
+ * Copyright 2004-2018 H2 Group. Multiple-Licensed under the MPL 2.0,
  * and the EPL 1.0 (http://h2database.com/html/license.html).
  * Initial Developer: H2 Group
  */
@@ -8,14 +8,22 @@ package org.h2.engine;
 import java.io.IOException;
 import java.sql.SQLException;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.BitSet;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
+import java.util.Objects;
 import java.util.Properties;
 import java.util.Set;
 import java.util.StringTokenizer;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.atomic.AtomicReference;
+
 import org.h2.api.DatabaseEventListener;
 import org.h2.api.ErrorCode;
 import org.h2.api.JavaObjectSerializer;
@@ -31,7 +39,9 @@ import org.h2.jdbc.JdbcConnection;
 import org.h2.message.DbException;
 import org.h2.message.Trace;
 import org.h2.message.TraceSystem;
+import org.h2.mvstore.MVStore;
 import org.h2.mvstore.db.MVTableEngine;
+import org.h2.result.LocalResultFactory;
 import org.h2.result.Row;
 import org.h2.result.RowFactory;
 import org.h2.result.SearchRow;
@@ -39,8 +49,10 @@ import org.h2.schema.Schema;
 import org.h2.schema.SchemaObject;
 import org.h2.schema.Sequence;
 import org.h2.schema.TriggerObject;
+import org.h2.security.auth.Authenticator;
 import org.h2.store.DataHandler;
 import org.h2.store.FileLock;
+import org.h2.store.FileLockMethod;
 import org.h2.store.FileStore;
 import org.h2.store.InDoubtTransaction;
 import org.h2.store.LobStorageBackend;
@@ -60,17 +72,14 @@ import org.h2.table.TableType;
 import org.h2.table.TableView;
 import org.h2.tools.DeleteDbFiles;
 import org.h2.tools.Server;
-import org.h2.util.BitField;
 import org.h2.util.JdbcUtils;
 import org.h2.util.MathUtils;
 import org.h2.util.NetUtils;
-import org.h2.util.New;
 import org.h2.util.SmallLRUCache;
 import org.h2.util.SourceCompiler;
 import org.h2.util.StringUtils;
 import org.h2.util.TempFileDeleter;
 import org.h2.util.Utils;
-import org.h2.value.CaseInsensitiveConcurrentMap;
 import org.h2.value.CaseInsensitiveMap;
 import org.h2.value.CompareMode;
 import org.h2.value.NullableKeyConcurrentMap;
@@ -89,6 +98,29 @@ public class Database implements DataHandler {
 
     private static int initialPowerOffCount;
 
+    private static final boolean ASSERT;
+
+    private static final ThreadLocal<Session> META_LOCK_DEBUGGING;
+    private static final ThreadLocal<Database> META_LOCK_DEBUGGING_DB;
+    private static final ThreadLocal<Throwable> META_LOCK_DEBUGGING_STACK;
+    private static final Session[] EMPTY_SESSION_ARRAY = new Session[0];
+
+    static {
+        boolean a = false;
+        // Intentional side-effect
+        assert a = true;
+        ASSERT = a;
+        if (a) {
+            META_LOCK_DEBUGGING = new ThreadLocal<>();
+            META_LOCK_DEBUGGING_DB = new ThreadLocal<>();
+            META_LOCK_DEBUGGING_STACK = new ThreadLocal<>();
+        } else {
+            META_LOCK_DEBUGGING = null;
+            META_LOCK_DEBUGGING_DB = null;
+            META_LOCK_DEBUGGING_STACK = null;
+        }
+    }
+
     /**
      * The default name of the system user. This name is only used as long as
      * there is no administrator user registered.
@@ -103,20 +135,20 @@ public class Database implements DataHandler {
     private final byte[] filePasswordHash;
     private final byte[] fileEncryptionKey;
 
-    private final HashMap<String, Role> roles = New.hashMap();
-    private final HashMap<String, User> users = New.hashMap();
-    private final HashMap<String, Setting> settings = New.hashMap();
-    private final HashMap<String, Schema> schemas = New.hashMap();
-    private final HashMap<String, Right> rights = New.hashMap();
-    private final HashMap<String, UserDataType> userDataTypes = New.hashMap();
-    private final HashMap<String, UserAggregate> aggregates = New.hashMap();
-    private final HashMap<String, Comment> comments = New.hashMap();
-    private final HashMap<String, TableEngine> tableEngines = New.hashMap();
+    private final HashMap<String, Role> roles = new HashMap<>();
+    private final HashMap<String, User> users = new HashMap<>();
+    private final HashMap<String, Setting> settings = new HashMap<>();
+    private final HashMap<String, Schema> schemas = new HashMap<>();
+    private final HashMap<String, Right> rights = new HashMap<>();
+    private final HashMap<String, UserDataType> userDataTypes = new HashMap<>();
+    private final HashMap<String, UserAggregate> aggregates = new HashMap<>();
+    private final HashMap<String, Comment> comments = new HashMap<>();
+    private final HashMap<String, TableEngine> tableEngines = new HashMap<>();
 
     private final Set<Session> userSessions =
             Collections.synchronizedSet(new HashSet<Session>());
-    private Session exclusiveSession;
-    private final BitField objectIds = new BitField();
+    private final AtomicReference<Session> exclusiveSession = new AtomicReference<>();
+    private final BitSet objectIds = new BitSet();
     private final Object lobSyncObject = new Object();
 
     private Schema mainSchema;
@@ -130,13 +162,13 @@ public class Database implements DataHandler {
     private Index metaIdIndex;
     private FileLock lock;
     private WriterThread writer;
-    private boolean starting;
+    private volatile boolean starting;
     private TraceSystem traceSystem;
     private Trace trace;
-    private final int fileLockMethod;
+    private final FileLockMethod fileLockMethod;
     private Role publicRole;
-    private long modificationDataId;
-    private long modificationMetaId;
+    private final AtomicLong modificationDataId = new AtomicLong();
+    private final AtomicLong modificationMetaId = new AtomicLong();
     private CompareMode compareMode;
     private String cluster = Constants.CLUSTERING_DISABLED;
     private boolean readOnly;
@@ -149,8 +181,8 @@ public class Database implements DataHandler {
     private int allowLiterals = Constants.ALLOW_LITERALS_ALL;
 
     private int powerOffCount = initialPowerOffCount;
-    private int closeDelay;
-    private DatabaseCloser delayedCloser;
+    private volatile int closeDelay;
+    private DelayedDatabaseCloser delayedCloser;
     private volatile boolean closing;
     private boolean ignoreCase;
     private boolean deleteFilesOnDisconnect;
@@ -159,9 +191,8 @@ public class Database implements DataHandler {
     private final String cacheType;
     private final String accessModeData;
     private boolean referentialIntegrity = true;
-    private boolean multiVersion;
-    private DatabaseCloser closeOnExit;
-    private Mode mode = Mode.getInstance(Mode.REGULAR);
+    private Mode mode = Mode.getRegular();
+    /** ie. the MULTI_THREADED setting */
     private boolean multiThreaded;
     private int maxOperationMemory =
             Constants.DEFAULT_MAX_OPERATION_MEMORY;
@@ -189,10 +220,10 @@ public class Database implements DataHandler {
     private final DbSettings dbSettings;
     private final long reconnectCheckDelayNs;
     private int logMode;
-    private MVTableEngine.Store mvStore;
+    private MVTableEngine.Store store;
     private int retentionTime;
     private boolean allowBuiltinAliasOverride;
-    private DbException backgroundException;
+    private final AtomicReference<DbException> backgroundException = new AtomicReference<>();
     private JavaObjectSerializer javaObjectSerializer;
     private String javaObjectSerializerName;
     private volatile boolean javaObjectSerializerInitialized;
@@ -200,8 +231,16 @@ public class Database implements DataHandler {
     private int queryStatisticsMaxEntries = Constants.QUERY_STATISTICS_MAX_ENTRIES;
     private QueryStatisticsData queryStatisticsData;
     private RowFactory rowFactory = RowFactory.DEFAULT;
+    private LocalResultFactory resultFactory = LocalResultFactory.DEFAULT;
+
+    private Authenticator authenticator;
 
     public Database(ConnectionInfo ci, String cipher) {
+        if (ASSERT) {
+            META_LOCK_DEBUGGING.set(null);
+            META_LOCK_DEBUGGING_DB.set(null);
+            META_LOCK_DEBUGGING_STACK.set(null);
+        }
         String name = ci.getName();
         this.dbSettings = ci.getDbSettings();
         this.reconnectCheckDelayNs = TimeUnit.MILLISECONDS.toNanos(dbSettings.reconnectCheckDelay);
@@ -229,14 +268,14 @@ public class Database implements DataHandler {
         }
         if (dbSettings.mvStore && lockMethodName == null) {
             if (autoServerMode) {
-                fileLockMethod = FileLock.LOCK_FILE;
+                fileLockMethod = FileLockMethod.FILE;
             } else {
-                fileLockMethod = FileLock.LOCK_FS;
+                fileLockMethod = FileLockMethod.FS;
             }
         } else {
             fileLockMethod = FileLock.getFileLockMethod(lockMethodName);
         }
-        if (dbSettings.mvStore && fileLockMethod == FileLock.LOCK_SERIALIZED) {
+        if (dbSettings.mvStore && fileLockMethod == FileLockMethod.SERIALIZED) {
             throw DbException.getUnsupportedException(
                     "MV_STORE combined with FILE_LOCK=SERIALIZED");
         }
@@ -248,16 +287,19 @@ public class Database implements DataHandler {
         }
         String modeName = ci.removeProperty("MODE", null);
         if (modeName != null) {
-            this.mode = Mode.getInstance(modeName);
+            mode = Mode.getInstance(modeName);
+            if (mode == null) {
+                throw DbException.get(ErrorCode.UNKNOWN_MODE_1, modeName);
+            }
         }
-        this.multiVersion =
-                ci.getProperty("MVCC", dbSettings.mvStore);
         this.logMode =
                 ci.getProperty("LOG", PageStore.LOG_MODE_SYNC);
         this.javaObjectSerializerName =
                 ci.getProperty("JAVA_OBJECT_SERIALIZER", null);
         this.multiThreaded =
-                ci.getProperty("MULTI_THREADED", false);
+                ci.getProperty("MULTI_THREADED", dbSettings.mvStore);
+        this.allowBuiltinAliasOverride =
+                ci.getProperty("BUILTIN_ALIAS_OVERRIDE", false);
         boolean closeAtVmShutdown =
                 dbSettings.dbCloseOnExit;
         int traceLevelFile =
@@ -268,47 +310,46 @@ public class Database implements DataHandler {
                 TraceSystem.DEFAULT_TRACE_LEVEL_SYSTEM_OUT);
         this.cacheType = StringUtils.toUpperEnglish(
                 ci.removeProperty("CACHE_TYPE", Constants.CACHE_TYPE_DEFAULT));
-        openDatabase(traceLevelFile, traceLevelSystemOut, closeAtVmShutdown);
+        openDatabase(traceLevelFile, traceLevelSystemOut, closeAtVmShutdown, ci);
     }
 
     private void openDatabase(int traceLevelFile, int traceLevelSystemOut,
-            boolean closeAtVmShutdown) {
+            boolean closeAtVmShutdown, ConnectionInfo ci) {
         try {
-            open(traceLevelFile, traceLevelSystemOut);
+            open(traceLevelFile, traceLevelSystemOut, ci);
             if (closeAtVmShutdown) {
-                try {
-                    closeOnExit = new DatabaseCloser(this, 0, true);
-                    Runtime.getRuntime().addShutdownHook(closeOnExit);
-                } catch (IllegalStateException e) {
-                    // shutdown in progress - just don't register the handler
-                    // (maybe an application wants to write something into a
-                    // database at shutdown time)
-                } catch (SecurityException  e) {
-                    // applets may not do that - ignore
-                    // Google App Engine doesn't allow
-                    // to instantiate classes that extend Thread
-                }
+                OnExitDatabaseCloser.register(this);
             }
         } catch (Throwable e) {
-            if (e instanceof OutOfMemoryError) {
-                e.fillInStackTrace();
-            }
-            boolean alreadyOpen = e instanceof DbException
-                    && ((DbException)e).getErrorCode() == ErrorCode.DATABASE_ALREADY_OPEN_1;
-            if (alreadyOpen) {
-                stopServer();
-            }
-
-            if (traceSystem != null) {
-                if (e instanceof DbException && !alreadyOpen) {
-                    // only write if the database is not already in use
-                    trace.error(e, "opening {0}", databaseName);
+            try {
+                if (e instanceof OutOfMemoryError) {
+                    e.fillInStackTrace();
                 }
-                traceSystem.close();
+                boolean alreadyOpen = e instanceof DbException
+                        && ((DbException) e).getErrorCode() == ErrorCode.DATABASE_ALREADY_OPEN_1;
+                if (alreadyOpen) {
+                    stopServer();
+                }
+
+                if (traceSystem != null) {
+                    if (e instanceof DbException && !alreadyOpen) {
+                        // only write if the database is not already in use
+                        trace.error(e, "opening {0}", databaseName);
+                    }
+                    traceSystem.close();
+                }
+                closeOpenFilesAndUnlock(false);
+            } catch(Throwable ex) {
+                e.addSuppressed(ex);
             }
-            closeOpenFilesAndUnlock(false);
             throw DbException.convert(e);
         }
+    }
+
+    public int getLockTimeout() {
+        Setting setting = findSetting(
+                SetTypes.getTypeName(SetTypes.DEFAULT_LOCK_TIMEOUT));
+        return setting == null ? Constants.INITIAL_LOCK_TIMEOUT : setting.getIntValue();
     }
 
     /**
@@ -330,6 +371,14 @@ public class Database implements DataHandler {
         this.rowFactory = rowFactory;
     }
 
+    public LocalResultFactory getResultFactory() {
+        return resultFactory;
+    }
+
+    public void setResultFactory(LocalResultFactory resultFactory) {
+        this.resultFactory = resultFactory;
+    }
+
     public static void setInitialPowerOffCount(int count) {
         initialPowerOffCount = count;
     }
@@ -341,13 +390,13 @@ public class Database implements DataHandler {
         powerOffCount = count;
     }
 
-    public MVTableEngine.Store getMvStore() {
-        return mvStore;
+    public MVTableEngine.Store getStore() {
+        return store;
     }
 
-    public void setMvStore(MVTableEngine.Store mvStore) {
-        this.mvStore = mvStore;
-        this.retentionTime = mvStore.getStore().getRetentionTime();
+    public void setStore(MVTableEngine.Store store) {
+        this.store = store;
+        this.retentionTime = store.getMvStore().getRetentionTime();
     }
 
     /**
@@ -359,7 +408,7 @@ public class Database implements DataHandler {
      */
     public boolean areEqual(Value a, Value b) {
         // can not use equals because ValueDecimal 0.0 is not equal to 0.00.
-        return a.compareTo(b, compareMode) == 0;
+        return a.compareTo(b, mode, compareMode) == 0;
     }
 
     /**
@@ -372,7 +421,7 @@ public class Database implements DataHandler {
      *         1 otherwise
      */
     public int compare(Value a, Value b) {
-        return a.compareTo(b, compareMode);
+        return a.compareTo(b, mode, compareMode);
     }
 
     /**
@@ -389,7 +438,7 @@ public class Database implements DataHandler {
     }
 
     public long getModificationDataId() {
-        return modificationDataId;
+        return modificationDataId.get();
     }
 
     /**
@@ -401,7 +450,7 @@ public class Database implements DataHandler {
      */
     private synchronized boolean reconnectModified(boolean pending) {
         if (readOnly || lock == null ||
-                fileLockMethod != FileLock.LOCK_SERIALIZED) {
+                fileLockMethod != FileLockMethod.SERIALIZED) {
             return true;
         }
         try {
@@ -410,7 +459,7 @@ public class Database implements DataHandler {
                 if (now > reconnectCheckNext) {
                     if (pending) {
                         String pos = pageStore == null ?
-                                null : "" + pageStore.getWriteCountTotal();
+                                null : Long.toString(pageStore.getWriteCountTotal());
                         lock.setProperty("logPos", pos);
                         lock.save();
                     }
@@ -432,7 +481,7 @@ public class Database implements DataHandler {
                 }
             }
             String pos = pageStore == null ?
-                    null : "" + pageStore.getWriteCountTotal();
+                    null : Long.toString(pageStore.getWriteCountTotal());
             lock.setProperty("logPos", pos);
             if (pending) {
                 lock.setProperty("changePending", "true-" + Math.random());
@@ -466,18 +515,18 @@ public class Database implements DataHandler {
     }
 
     public long getNextModificationDataId() {
-        return ++modificationDataId;
+        return modificationDataId.incrementAndGet();
     }
 
     public long getModificationMetaId() {
-        return modificationMetaId;
+        return modificationMetaId.get();
     }
 
     public long getNextModificationMetaId() {
         // if the meta data has been modified, the data is modified as well
         // (because MetaTable returns modificationDataId)
-        modificationDataId++;
-        return modificationMetaId++;
+        modificationDataId.incrementAndGet();
+        return modificationMetaId.incrementAndGet() - 1;
     }
 
     public int getPowerOffCount() {
@@ -497,8 +546,8 @@ public class Database implements DataHandler {
             try {
                 powerOffCount = -1;
                 stopWriter();
-                if (mvStore != null) {
-                    mvStore.closeImmediately();
+                if (store != null) {
+                    store.closeImmediately();
                 }
                 if (pageStore != null) {
                     try {
@@ -510,7 +559,7 @@ public class Database implements DataHandler {
                 }
                 if (lock != null) {
                     stopServer();
-                    if (fileLockMethod != FileLock.LOCK_SERIALIZED) {
+                    if (fileLockMethod != FileLockMethod.SERIALIZED) {
                         // allow testing shutdown
                         lock.unlock();
                     }
@@ -574,7 +623,7 @@ public class Database implements DataHandler {
      * @return true if the cipher algorithm and the password match
      */
     boolean validateFilePasswordHash(String testCipher, byte[] testHash) {
-        if (!StringUtils.equals(testCipher, this.cipher)) {
+        if (!Objects.equals(testCipher, this.cipher)) {
             return false;
         }
         return Utils.compareSecure(testHash, filePasswordHash);
@@ -597,7 +646,7 @@ public class Database implements DataHandler {
         return dbSettings.databaseToUpper ? StringUtils.toUpperEnglish(n) : n;
     }
 
-    private synchronized void open(int traceLevelFile, int traceLevelSystemOut) {
+    private synchronized void open(int traceLevelFile, int traceLevelSystemOut, ConnectionInfo ci) {
         if (persistent) {
 			//databaseName = E:/H2/baseDir/mydb
 			//dataFileName = E:/H2/baseDir/mydb.data.db
@@ -623,6 +672,9 @@ public class Database implements DataHandler {
             }
             if (existsPage && !existsMv) {
                 dbSettings.mvStore = false;
+                // Need to re-init this because the first time we do it we don't
+                // know if we have an mvstore or a pagestore.
+                multiThreaded = ci.getProperty("MULTI_THREADED", false);
             }
             if (readOnly) {
                 if (traceLevelFile >= TraceSystem.DEBUG) {
@@ -643,10 +695,9 @@ public class Database implements DataHandler {
             trace.info("opening {0} (build {1})", databaseName, Constants.BUILD_ID);
             if (autoServerMode) {
                 if (readOnly ||
-                        fileLockMethod == FileLock.LOCK_NO ||
-                        fileLockMethod == FileLock.LOCK_SERIALIZED ||
-                        fileLockMethod == FileLock.LOCK_FS ||
-                        !persistent) {
+                        fileLockMethod == FileLockMethod.NO ||
+                        fileLockMethod == FileLockMethod.SERIALIZED ||
+                        fileLockMethod == FileLockMethod.FS) {
                     throw DbException.getUnsupportedException(
                             "autoServerMode && (readOnly || " +
                             "fileLockMethod == NO || " +
@@ -663,8 +714,8 @@ public class Database implements DataHandler {
                             "Lock file exists: " + lockFileName);
                 }
             }
-            if (!readOnly && fileLockMethod != FileLock.LOCK_NO) {
-                if (fileLockMethod != FileLock.LOCK_FS) {
+            if (!readOnly && fileLockMethod != FileLockMethod.NO) {
+                if (fileLockMethod != FileLockMethod.FS) {
                     lock = new FileLock(traceSystem, lockFileName, Constants.LOCK_SLEEP);
                     lock.lock(fileLockMethod);
                     if (autoServerMode) {
@@ -704,7 +755,7 @@ public class Database implements DataHandler {
                 getPageStore();
             }
             starting = false;
-            if (mvStore == null) {
+            if (store == null) {
                 writer = WriterThread.create(this, writeDelay);
             } else {
                 setWriteDelay(writeDelay);
@@ -720,8 +771,15 @@ public class Database implements DataHandler {
                 getPageStore();
             }
         }
-        systemUser = new User(this, 0, SYSTEM_USER_NAME, true); //DBA
-        mainSchema = new Schema(this, 0, Constants.SCHEMA_MAIN, systemUser, true); //PUBLIC 不明确指定Schema时，默认就是它
+//<<<<<<< HEAD
+//        systemUser = new User(this, 0, SYSTEM_USER_NAME, true); //DBA
+//        mainSchema = new Schema(this, 0, Constants.SCHEMA_MAIN, systemUser, true); //PUBLIC 不明确指定Schema时，默认就是它
+//=======
+        if(store != null) {
+            store.getTransactionStore().init();
+        }
+        systemUser = new User(this, 0, SYSTEM_USER_NAME, true);
+        mainSchema = new Schema(this, 0, Constants.SCHEMA_MAIN, systemUser, true);
         infoSchema = new Schema(this, -1, "INFORMATION_SCHEMA", systemUser, true);
         schemas.put(mainSchema.getName(), mainSchema);
         schemas.put(infoSchema.getName(), infoSchema);
@@ -750,17 +808,22 @@ public class Database implements DataHandler {
         data.create = create;
         data.isHidden = true;
         data.session = systemSession;
+        starting = true;
         meta = mainSchema.createTable(data);
+        handleUpgradeIssues();
         IndexColumn[] pkCols = IndexColumn.wrap(new Column[] { columnId });
         //是TreeIndex，因为createPrimaryKey使用了persistent=false, hash=false
         metaIdIndex = meta.addIndex(systemSession, "SYS_ID", 0, pkCols, IndexType.createPrimaryKey(
                 false, false), true, null);
+        systemSession.commit(true);
         objectIds.set(0);
-        
-        //读整个SYS表，取出所有的DDL语句，然后重新执行一遍
-        starting = true;
+//<<<<<<< HEAD
+//        
+//        //读整个SYS表，取出所有的DDL语句，然后重新执行一遍
+//        starting = true;
+//=======
         Cursor cursor = metaIdIndex.find(systemSession, null, null);
-        ArrayList<MetaRecord> records = New.arrayList();
+        ArrayList<MetaRecord> records = new ArrayList<>((int) metaIdIndex.getRowCountApproximation());
         while (cursor.next()) {
             MetaRecord rec = new MetaRecord(cursor.get());
             objectIds.set(rec.getId());
@@ -772,9 +835,10 @@ public class Database implements DataHandler {
                 rec.execute(this, systemSession, eventListener);
             }
         }
-        if (mvStore != null) {
-            mvStore.initTransactions();
-            mvStore.removeTemporaryMaps(objectIds);
+        systemSession.commit(true);
+        if (store != null) {
+            store.getTransactionStore().endLeftoverTransactions();
+            store.removeTemporaryMaps(objectIds);
         }
         recompileInvalidViews(systemSession);
         starting = false;
@@ -789,7 +853,7 @@ public class Database implements DataHandler {
             }
             // mark all ids used in the page store
             if (pageStore != null) {
-                BitField f = pageStore.getObjectIds();
+                BitSet f = pageStore.getObjectIds();
                 for (int i = 0, len = f.length(); i < len; i++) {
                     if (f.get(i) && !objectIds.get(i)) {
                         trace.info("unused object id: " + i);
@@ -806,6 +870,50 @@ public class Database implements DataHandler {
         trace.info("opened {0}", databaseName);
         if (checkpointAllowed > 0) {
             afterWriting();
+        }
+    }
+
+
+    private void handleUpgradeIssues() {
+        if (store != null && !isReadOnly()) {
+            MVStore mvStore = store.getMvStore();
+            // Version 1.4.197 erroneously handles index on SYS_ID.ID as secondary
+            // and does not delegate to scan index as it should.
+            // This code will try to fix that by converging ROW_ID and ID,
+            // since they may have got out of sync, and by removing map "index.0",
+            // which corresponds to a secondary index.
+            if (mvStore.hasMap("index.0")) {
+                Index scanIndex = meta.getScanIndex(systemSession);
+                Cursor curs = scanIndex.find(systemSession, null, null);
+                List<Row> allMetaRows = new ArrayList<>();
+                boolean needRepair = false;
+                while (curs.next()) {
+                    Row row = curs.get();
+                    allMetaRows.add(row);
+                    long rowId = row.getKey();
+                    int id = row.getValue(0).getInt();
+                    if (id != rowId) {
+                        needRepair = true;
+                        row.setKey(id);
+                    }
+                }
+                if (needRepair) {
+                    Row[] array = allMetaRows.toArray(new Row[0]);
+                    Arrays.sort(array, new Comparator<Row>() {
+                        @Override
+                        public int compare(Row o1, Row o2) {
+                            return Integer.compare(o1.getValue(0).getInt(), o2.getValue(0).getInt());
+                        }
+                    });
+                    meta.truncate(systemSession);
+                    for (Row row : array) {
+                        meta.addRow(systemSession, row);
+                    }
+                    systemSession.commit(true);
+                }
+                mvStore.removeMap("index.0");
+                mvStore.commit();
+            }
         }
     }
 
@@ -890,22 +998,19 @@ public class Database implements DataHandler {
         }
     }
 
-    private synchronized void addMeta(Session session, DbObject obj) {
+    private void addMeta(Session session, DbObject obj) {
+        assert Thread.holdsLock(this);
         int id = obj.getId();
         if (id > 0 && !starting && !obj.isTemporary()) {
             Row r = meta.getTemplateRow();
-            MetaRecord rec = new MetaRecord(obj);
-            rec.setRecord(r);
-            objectIds.set(id);
+            MetaRecord.populateRowFromDBObject(obj, r);
+            synchronized (objectIds) {
+                objectIds.set(id);
+            }
             if (SysProperties.CHECK) {
                 verifyMetaLocked(session);
             }
             meta.addRow(session, r);
-            if (isMultiVersion()) {
-                // TODO this should work without MVCC, but avoid risks at the
-                // moment
-                session.log(meta, UndoLogRecord.INSERT, r);
-            }
         }
     }
 
@@ -935,8 +1040,28 @@ public class Database implements DataHandler {
         if (meta == null) {
             return true;
         }
-        boolean wasLocked = meta.lock(session, true, true);
-        return wasLocked;
+        if (ASSERT) {
+            // If we are locking two different databases in the same stack, just ignore it.
+            // This only happens in TestLinkedTable where we connect to another h2 DB in the
+            // same process.
+            if (META_LOCK_DEBUGGING_DB.get() != null
+                    && META_LOCK_DEBUGGING_DB.get() != this) {
+                final Session prev = META_LOCK_DEBUGGING.get();
+                if (prev == null) {
+                    META_LOCK_DEBUGGING.set(session);
+                    META_LOCK_DEBUGGING_DB.set(this);
+                    META_LOCK_DEBUGGING_STACK.set(new Throwable("Last meta lock granted in this stack trace, "+
+                            "this is debug information for following IllegalStateException"));
+                } else if (prev != session) {
+                    META_LOCK_DEBUGGING_STACK.get().printStackTrace();
+                    throw new IllegalStateException("meta currently locked by "
+                            + prev +", sessionid="+ prev.getId()
+                            + " and trying to be locked by different session, "
+                            + session +", sessionid="+ session.getId() + " on same thread");
+                }
+            }
+        }
+        return meta.lock(session, true, true);
     }
 
     /**
@@ -945,8 +1070,25 @@ public class Database implements DataHandler {
      * @param session the session
      */
     public void unlockMeta(Session session) {
+        unlockMetaDebug(session);
         meta.unlock(session);
         session.unlock(meta);
+    }
+
+    /**
+     * This method doesn't actually unlock the metadata table, all it does it
+     * reset the debugging flags.
+     *
+     * @param session the session
+     */
+    public void unlockMetaDebug(Session session) {
+        if (ASSERT) {
+            if (META_LOCK_DEBUGGING.get() == session) {
+                META_LOCK_DEBUGGING.set(null);
+                META_LOCK_DEBUGGING_DB.set(null);
+                META_LOCK_DEBUGGING_STACK.set(null);
+            }
+        }
     }
 
     /**
@@ -955,38 +1097,58 @@ public class Database implements DataHandler {
      * @param session the session
      * @param id the id of the object to remove
      */
-    public synchronized void removeMeta(Session session, int id) {
-    	//比如SYS表的id是0
-        if (id > 0 && !starting) { //如果starting为true，说明数据库是在open过程中，比如在执行MetaRecord
+//<<<<<<< HEAD
+//    public synchronized void removeMeta(Session session, int id) {
+//    	//比如SYS表的id是0
+//        if (id > 0 && !starting) { //如果starting为true，说明数据库是在open过程中，比如在执行MetaRecord
+//=======
+    public void removeMeta(Session session, int id) {
+        if (id > 0 && !starting) {
             SearchRow r = meta.getTemplateSimpleRow(false);
             r.setValue(0, ValueInt.get(id));
             //在调用removeMeta前必须调用过lockMeta了，如果wasLocked为false
             //说明当前meta表没有调用lockMeta或者被其他session锁住了
             boolean wasLocked = lockMeta(session);
-            Cursor cursor = metaIdIndex.find(session, r, r);
-            if (cursor.next()) {
-                if (SysProperties.CHECK) {
-                    if (lockMode != Constants.LOCK_MODE_OFF && !wasLocked) {
-                        throw DbException.throwInternalError();
+            try {
+                Cursor cursor = metaIdIndex.find(session, r, r);
+                if (cursor.next()) {
+                    if (SysProperties.CHECK) {
+                        if (lockMode != Constants.LOCK_MODE_OFF && !wasLocked) {
+                            throw DbException.throwInternalError();
+                        }
+                    }
+                    Row found = cursor.get();
+                    meta.removeRow(session, found);
+                    if (SysProperties.CHECK) {
+                        checkMetaFree(session, id);
                     }
                 }
-                Row found = cursor.get();
-                meta.removeRow(session, found);
-                if (isMultiVersion()) {
-                    // TODO this should work without MVCC, but avoid risks at
-                    // the moment
-                    session.log(meta, UndoLogRecord.DELETE, found);
+            } finally {
+                if (!wasLocked) {
+                    // must not keep the lock if it was not locked
+                    // otherwise updating sequences may cause a deadlock
+                    unlockMeta(session);
                 }
-                if (SysProperties.CHECK) {
-                    checkMetaFree(session, id);
-                }
-            } else if (!wasLocked) {
-                // must not keep the lock if it was not locked
-                // otherwise updating sequences may cause a deadlock
-                meta.unlock(session);
-                session.unlock(meta);
             }
-            objectIds.clear(id);
+            if (isMVStore()) {
+                // release of the object id has to be postponed until the end of the transaction,
+                // otherwise it might be re-used prematurely, and it would make
+                // rollback impossible or lead to MVMaps name collision,
+                // so until then ids are accumulated within session
+                session.scheduleDatabaseObjectIdForRelease(id);
+            } else {
+                // but PageStore, on the other hand, for reasons unknown to me,
+                // requires immediate id release
+                synchronized (this) {
+                    objectIds.clear(id);
+                }
+            }
+        }
+    }
+
+    void releaseDatabaseObjectIds(BitSet idsToRelease) {
+        synchronized (objectIds) {
+            objectIds.andNot(idsToRelease);
         }
     }
 
@@ -1175,7 +1337,7 @@ public class Database implements DataHandler {
         if (closing) {
             return null;
         }
-        if (exclusiveSession != null) {
+        if (exclusiveSession.get() != null) {
             throw DbException.get(ErrorCode.DATABASE_IS_IN_EXCLUSIVE_MODE);
         }
         Session session = new Session(this, user, ++nextSessionId);
@@ -1195,25 +1357,20 @@ public class Database implements DataHandler {
      */
     public synchronized void removeSession(Session session) {
         if (session != null) {
-            if (exclusiveSession == session) {
-                exclusiveSession = null;
-            }
+            exclusiveSession.compareAndSet(session, null);
             userSessions.remove(session);
             if (session != systemSession && session != lobSession) {
                 trace.info("disconnecting session #{0}", session.getId());
             }
         }
-        if (userSessions.size() == 0 &&
+        if (userSessions.isEmpty() &&
                 session != systemSession && session != lobSession) {
             if (closeDelay == 0) {
                 close(false);
             } else if (closeDelay < 0) {
                 return;
             } else {
-                delayedCloser = new DatabaseCloser(this, closeDelay * 1000, false);
-                delayedCloser.setName("H2 Close Delay " + getShortName());
-                delayedCloser.setDaemon(true);
-                delayedCloser.start();
+                delayedCloser = new DelayedDatabaseCloser(this, closeDelay * 1000);
             }
         }
         if (session != systemSession &&
@@ -1223,8 +1380,7 @@ public class Database implements DataHandler {
     }
 
     private synchronized void closeAllSessionsException(Session except) {
-        Session[] all = new Session[userSessions.size()];
-        userSessions.toArray(all);
+        Session[] all = userSessions.toArray(EMPTY_SESSION_ARRAY);
         for (Session s : all) {
             if (s != except) {
                 try {
@@ -1247,110 +1403,104 @@ public class Database implements DataHandler {
      *            hook
      */
     void close(boolean fromShutdownHook) {
-        synchronized (this) {
-            if (closing) {
-                return;
-            }
-            throwLastBackgroundException();
-            if (fileLockMethod == FileLock.LOCK_SERIALIZED &&
-                    !reconnectChangePending) {
-                // another connection may have written something - don't write
-                try {
-                    closeOpenFilesAndUnlock(false);
-                } catch (DbException e) {
-                    // ignore
-                }
-                traceSystem.close();
-                Engine.getInstance().close(databaseName);
-                return;
-            }
-            closing = true;
-            stopServer();
-            if (userSessions.size() > 0) {
-                if (!fromShutdownHook) {
+        try {
+            synchronized (this) {
+                if (closing) {
                     return;
                 }
-                trace.info("closing {0} from shutdown hook", databaseName);
-                closeAllSessionsException(null);
-            }
-            trace.info("closing {0}", databaseName);
-            if (eventListener != null) {
-                // allow the event listener to connect to the database
-                closing = false;
-                DatabaseEventListener e = eventListener;
-                // set it to null, to make sure it's called only once
-                eventListener = null;
-                e.closingDatabase();
-                if (userSessions.size() > 0) {
-                    // if a connection was opened, we can't close the database
+                throwLastBackgroundException();
+                if (fileLockMethod == FileLockMethod.SERIALIZED &&
+                        !reconnectChangePending) {
+                    // another connection may have written something - don't write
+                    try {
+                        closeOpenFilesAndUnlock(false);
+                    } catch (DbException e) {
+                        // ignore
+                    }
+                    traceSystem.close();
                     return;
                 }
                 closing = true;
+                stopServer();
+                if (!userSessions.isEmpty()) {
+                    if (!fromShutdownHook) {
+                        return;
+                    }
+                    trace.info("closing {0} from shutdown hook", databaseName);
+                    closeAllSessionsException(null);
+                }
+                trace.info("closing {0}", databaseName);
+                if (eventListener != null) {
+                    // allow the event listener to connect to the database
+                    closing = false;
+                    DatabaseEventListener e = eventListener;
+                    // set it to null, to make sure it's called only once
+                    eventListener = null;
+                    e.closingDatabase();
+                    if (!userSessions.isEmpty()) {
+                        // if a connection was opened, we can't close the database
+                        return;
+                    }
+                    closing = true;
+                }
+                if (!this.isReadOnly()) {
+                    removeOrphanedLobs();
+                }
             }
-        }
-        removeOrphanedLobs();
-        try {
-            if (systemSession != null) {
-                if (powerOffCount != -1) {
-                    for (Table table : getAllTablesAndViews(false)) {
-                        if (table.isGlobalTemporary()) {
-                            table.removeChildrenAndResources(systemSession);
-                        } else {
-                            table.close(systemSession);
+            try {
+                if (systemSession != null) {
+                    if (powerOffCount != -1) {
+                        for (Table table : getAllTablesAndViews(false)) {
+                            if (table.isGlobalTemporary()) {
+                                table.removeChildrenAndResources(systemSession);
+                            } else {
+                                table.close(systemSession);
+                            }
+                        }
+                        for (SchemaObject obj : getAllSchemaObjects(
+                                DbObject.SEQUENCE)) {
+                            Sequence sequence = (Sequence) obj;
+                            sequence.close();
                         }
                     }
                     for (SchemaObject obj : getAllSchemaObjects(
-                            DbObject.SEQUENCE)) {
-                        Sequence sequence = (Sequence) obj;
-                        sequence.close();
+                            DbObject.TRIGGER)) {
+                        TriggerObject trigger = (TriggerObject) obj;
+                        try {
+                            trigger.close();
+                        } catch (SQLException e) {
+                            trace.error(e, "close");
+                        }
+                    }
+                    if (powerOffCount != -1) {
+                        meta.close(systemSession);
+                        systemSession.commit(true);
                     }
                 }
-                for (SchemaObject obj : getAllSchemaObjects(
-                        DbObject.TRIGGER)) {
-                    TriggerObject trigger = (TriggerObject) obj;
-                    try {
-                        trigger.close();
-                    } catch (SQLException e) {
-                        trace.error(e, "close");
-                    }
-                }
-                if (powerOffCount != -1) {
-                    meta.close(systemSession);
-                    systemSession.commit(true);
-                }
+            } catch (DbException e) {
+                trace.error(e, "close");
             }
-        } catch (DbException e) {
-            trace.error(e, "close");
-        }
-        tempFileDeleter.deleteAll();
-        try {
-            closeOpenFilesAndUnlock(true);
-        } catch (DbException e) {
-            trace.error(e, "close");
-        }
-        trace.info("closed");
-        traceSystem.close();
-        if (closeOnExit != null) {
-            closeOnExit.reset();
+            tempFileDeleter.deleteAll();
             try {
-                Runtime.getRuntime().removeShutdownHook(closeOnExit);
-            } catch (IllegalStateException e) {
-                // ignore
-            } catch (SecurityException  e) {
-                // applets may not do that - ignore
+                closeOpenFilesAndUnlock(true);
+            } catch (DbException e) {
+                trace.error(e, "close");
             }
-            closeOnExit = null;
-        }
-        Engine.getInstance().close(databaseName);
-        if (deleteFilesOnDisconnect && persistent) {
-            deleteFilesOnDisconnect = false;
-            try {
-                String directory = FileUtils.getParent(databaseName);
-                String name = FileUtils.getName(databaseName);
-                DeleteDbFiles.execute(directory, name, true);
-            } catch (Exception e) {
-                // ignore (the trace is closed already)
+            trace.info("closed");
+            traceSystem.close();
+            OnExitDatabaseCloser.unregister(this);
+            if (deleteFilesOnDisconnect && persistent) {
+                deleteFilesOnDisconnect = false;
+                try {
+                    String directory = FileUtils.getParent(databaseName);
+                    String name = FileUtils.getName(databaseName);
+                    DeleteDbFiles.execute(directory, name, true);
+                } catch (Exception e) {
+                    // ignore (the trace is closed already)
+                }
             }
+        } finally {
+            Engine.getInstance().close(databaseName);
         }
     }
 
@@ -1361,7 +1511,7 @@ public class Database implements DataHandler {
         }
         boolean lobStorageIsUsed = infoSchema.findTableOrView(
                 systemSession, LobStorageBackend.LOB_DATA_TABLE) != null;
-        lobStorageIsUsed |= mvStore != null;
+        lobStorageIsUsed |= store != null;
         if (!lobStorageIsUsed) {
             return;
         }
@@ -1387,87 +1537,97 @@ public class Database implements DataHandler {
      * @param flush whether writing is allowed
      */
     private synchronized void closeOpenFilesAndUnlock(boolean flush) {
-        stopWriter();
-        if (pageStore != null) {
-            if (flush) {
-                try {
-                    pageStore.checkpoint();
-                    if (!readOnly) {
-                        lockMeta(pageStore.getPageStoreSession());
-                        pageStore.compact(compactMode);
+        try {
+            stopWriter();
+            if (pageStore != null) {
+                if (flush) {
+                    try {
+                        pageStore.checkpoint();
+                        if (!readOnly) {
+                            lockMeta(pageStore.getPageStoreSession());
+                            pageStore.compact(compactMode);
+                            unlockMeta(pageStore.getPageStoreSession());
+                        }
+                    } catch (DbException e) {
+                        if (ASSERT) {
+                            int code = e.getErrorCode();
+                            if (code != ErrorCode.DATABASE_IS_CLOSED &&
+                                    code != ErrorCode.LOCK_TIMEOUT_1 &&
+                                    code != ErrorCode.IO_EXCEPTION_2) {
+                                e.printStackTrace();
+                            }
+                        }
+                        trace.error(e, "close");
+                    } catch (Throwable t) {
+                        if (ASSERT) {
+                            t.printStackTrace();
+                        }
+                        trace.error(t, "close");
                     }
-                } catch (DbException e) {
-                    if (SysProperties.CHECK2) {
-                        int code = e.getErrorCode();
-                        if (code != ErrorCode.DATABASE_IS_CLOSED &&
-                                code != ErrorCode.LOCK_TIMEOUT_1 &&
-                                code != ErrorCode.IO_EXCEPTION_2) {
-                            e.printStackTrace();
+                }
+            }
+            reconnectModified(false);
+            if (store != null) {
+                MVStore mvStore = store.getMvStore();
+                if (mvStore != null && !mvStore.isClosed()) {
+                    boolean compactFully =
+                            compactMode == CommandInterface.SHUTDOWN_COMPACT ||
+                            compactMode == CommandInterface.SHUTDOWN_DEFRAG ||
+                            getSettings().defragAlways;
+                    if (!compactFully && !mvStore.isReadOnly()) {
+                        try {
+                            store.compactFile(dbSettings.maxCompactTime);
+                        } catch (Throwable t) {
+                            trace.error(t, "compactFile");
                         }
                     }
-                    trace.error(e, "close");
-                } catch (Throwable t) {
-                    if (SysProperties.CHECK2) {
-                        t.printStackTrace();
-                    }
-                    trace.error(t, "close");
+                    store.close(compactFully);
                 }
             }
-        }
-        reconnectModified(false);
-        if (mvStore != null) {
-            long maxCompactTime = dbSettings.maxCompactTime;
-            if (compactMode == CommandInterface.SHUTDOWN_COMPACT) {
-                mvStore.compactFile(dbSettings.maxCompactTime);
-            } else if (compactMode == CommandInterface.SHUTDOWN_DEFRAG) {
-                maxCompactTime = Long.MAX_VALUE;
-            } else if (getSettings().defragAlways) {
-                maxCompactTime = Long.MAX_VALUE;
+            if (systemSession != null) {
+                systemSession.close();
+                systemSession = null;
             }
-            mvStore.close(maxCompactTime);
-        }
-        closeFiles();
-        if (persistent && lock == null &&
-                fileLockMethod != FileLock.LOCK_NO &&
-                fileLockMethod != FileLock.LOCK_FS) {
-            // everything already closed (maybe in checkPowerOff)
-            // don't delete temp files in this case because
-            // the database could be open now (even from within another process)
-            return;
-        }
-        if (persistent) {
-            deleteOldTempFiles();
-        }
-        if (systemSession != null) {
-            systemSession.close();
-            systemSession = null;
-        }
-        if (lobSession != null) {
-            lobSession.close();
-            lobSession = null;
-        }
-        if (lock != null) {
-            if (fileLockMethod == FileLock.LOCK_SERIALIZED) {
-                // wait before deleting the .lock file,
-                // otherwise other connections can not detect that
-                if (lock.load().containsKey("changePending")) {
-                    try {
-                        Thread.sleep(TimeUnit.NANOSECONDS
-                                .toMillis((long) (reconnectCheckDelayNs * 1.1)));
-                    } catch (InterruptedException e) {
-                        trace.error(e, "close");
+            if (lobSession != null) {
+                lobSession.close();
+                lobSession = null;
+            }
+            closeFiles();
+            if (persistent && lock == null &&
+                    fileLockMethod != FileLockMethod.NO &&
+                    fileLockMethod != FileLockMethod.FS) {
+                // everything already closed (maybe in checkPowerOff)
+                // don't delete temp files in this case because
+                // the database could be open now (even from within another process)
+                return;
+            }
+            if (persistent) {
+                deleteOldTempFiles();
+            }
+        } finally {
+            if (lock != null) {
+                if (fileLockMethod == FileLockMethod.SERIALIZED) {
+                    // wait before deleting the .lock file,
+                    // otherwise other connections can not detect that
+                    if (lock.load().containsKey("changePending")) {
+                        try {
+                            Thread.sleep(TimeUnit.NANOSECONDS
+                                    .toMillis((long) (reconnectCheckDelayNs * 1.1)));
+                        } catch (InterruptedException e) {
+                            trace.error(e, "close");
+                        }
                     }
                 }
+                lock.unlock();
+                lock = null;
             }
-            lock.unlock();
-            lock = null;
         }
     }
 
     private synchronized void closeFiles() {
         try {
-            if (mvStore != null) {
-                mvStore.closeImmediately();
+            if (store != null) {
+                store.closeImmediately();
             }
             if (pageStore != null) {
                 pageStore.close();
@@ -1492,18 +1652,27 @@ public class Database implements DataHandler {
      *
      * @return the id
      */
-    public synchronized int allocateObjectId() { //如果前面的对象id回收了，这里会重复利用前面已回收的id。
-        int i = objectIds.nextClearBit(0);
-        objectIds.set(i);
+//<<<<<<< HEAD
+//    public synchronized int allocateObjectId() { //如果前面的对象id回收了，这里会重复利用前面已回收的id。
+//        int i = objectIds.nextClearBit(0);
+//        objectIds.set(i);
+//=======
+    public int allocateObjectId() {
+        Object lock = isMVStore() ? objectIds : this;
+        int i;
+        synchronized (lock) {
+            i = objectIds.nextClearBit(0);
+            objectIds.set(i);
+        }
         return i;
     }
 
     public ArrayList<UserAggregate> getAllAggregates() {
-        return New.arrayList(aggregates.values());
+        return new ArrayList<>(aggregates.values());
     }
 
     public ArrayList<Comment> getAllComments() {
-        return New.arrayList(comments.values());
+        return new ArrayList<>(comments.values());
     }
 
     public int getAllowLiterals() {
@@ -1514,11 +1683,11 @@ public class Database implements DataHandler {
     }
 
     public ArrayList<Right> getAllRights() {
-        return New.arrayList(rights.values());
+        return new ArrayList<>(rights.values());
     }
 
     public ArrayList<Role> getAllRoles() {
-        return New.arrayList(roles.values());
+        return new ArrayList<>(roles.values());
     }
 
     /**
@@ -1528,9 +1697,9 @@ public class Database implements DataHandler {
      */
     public ArrayList<SchemaObject> getAllSchemaObjects() {
         initMetaTables();
-        ArrayList<SchemaObject> list = New.arrayList();
+        ArrayList<SchemaObject> list = new ArrayList<>();
         for (Schema schema : schemas.values()) {
-            list.addAll(schema.getAll());
+            schema.getAll(list);
         }
         return list;
     }
@@ -1545,9 +1714,9 @@ public class Database implements DataHandler {
         if (type == DbObject.TABLE_OR_VIEW) {
             initMetaTables();
         }
-        ArrayList<SchemaObject> list = New.arrayList();
+        ArrayList<SchemaObject> list = new ArrayList<>();
         for (Schema schema : schemas.values()) {
-            list.addAll(schema.getAll(type));
+            schema.getAll(type, list);
         }
         return list;
     }
@@ -1564,7 +1733,7 @@ public class Database implements DataHandler {
         if (includeMeta) {
             initMetaTables();
         }
-        ArrayList<Table> list = New.arrayList();
+        ArrayList<Table> list = new ArrayList<>();
         for (Schema schema : schemas.values()) {
             list.addAll(schema.getAllTablesAndViews());
         }
@@ -1577,7 +1746,7 @@ public class Database implements DataHandler {
      * @return all objects of that type
      */
     public ArrayList<TableSynonym> getAllSynonyms() {
-        ArrayList<TableSynonym> list = New.arrayList();
+        ArrayList<TableSynonym> list = new ArrayList<>();
         for (Schema schema : schemas.values()) {
             list.addAll(schema.getAllSynonyms());
         }
@@ -1591,7 +1760,8 @@ public class Database implements DataHandler {
      * @return the list
      */
     public ArrayList<Table> getTableOrViewByName(String name) {
-        ArrayList<Table> list = New.arrayList();
+        // we expect that at most one table matches, at least in most cases
+        ArrayList<Table> list = new ArrayList<>(1);
         for (Schema schema : schemas.values()) {
             Table table = schema.getTableOrViewByName(name);
             if (table != null) {
@@ -1603,19 +1773,19 @@ public class Database implements DataHandler {
 
     public ArrayList<Schema> getAllSchemas() {
         initMetaTables();
-        return New.arrayList(schemas.values());
+        return new ArrayList<>(schemas.values());
     }
 
     public ArrayList<Setting> getAllSettings() {
-        return New.arrayList(settings.values());
+        return new ArrayList<>(settings.values());
     }
 
     public ArrayList<UserDataType> getAllUserDataTypes() {
-        return New.arrayList(userDataTypes.values());
+        return new ArrayList<>(userDataTypes.values());
     }
 
     public ArrayList<User> getAllUsers() {
-        return New.arrayList(users.values());
+        return new ArrayList<>(users.values());
     }
 
     public String getCacheType() {
@@ -1659,7 +1829,7 @@ public class Database implements DataHandler {
         // need to synchronized on userSession, otherwise the list
         // may contain null elements
         synchronized (userSessions) {
-            list = New.arrayList(userSessions);
+            list = new ArrayList<>(userSessions);
         }
         // copy, to ensure the reference is stable
         Session sys = systemSession;
@@ -1670,9 +1840,7 @@ public class Database implements DataHandler {
         if (includingSystemSession && lob != null) {
             list.add(lob);
         }
-        Session[] array = new Session[list.size()];
-        list.toArray(array);
-        return array;
+        return list.toArray(new Session[0]);
     }
 
     /**
@@ -1684,14 +1852,32 @@ public class Database implements DataHandler {
     //并不会执行obj的相关sql，也不删除或修改Schema或Database中的相关map和obj的子对象
     //仅仅是先删除SYS表中与obj相关的旧sql并添加新的sql
     public void updateMeta(Session session, DbObject obj) {
-        lockMeta(session);
-        synchronized (this) {
+        if (isMVStore()) {
             int id = obj.getId();
-            removeMeta(session, id);
-            addMeta(session, obj);
-            // for temporary objects
             if (id > 0) {
-                objectIds.set(id);
+                if (!starting && !obj.isTemporary()) {
+                    Row newRow = meta.getTemplateRow();
+                    MetaRecord.populateRowFromDBObject(obj, newRow);
+                    Row oldRow = metaIdIndex.getRow(session, id);
+                    if (oldRow != null) {
+                        meta.updateRow(session, oldRow, newRow);
+                    }
+                }
+                // for temporary objects
+                synchronized (objectIds) {
+                    objectIds.set(id);
+                }
+            }
+        } else {
+            lockMeta(session);
+            synchronized (this) {
+                int id = obj.getId();
+                removeMeta(session, id);
+                addMeta(session, obj);
+                // for temporary objects
+                if(id > 0) {
+                    objectIds.set(id);
+                }
             }
         }
     }
@@ -1748,9 +1934,11 @@ public class Database implements DataHandler {
             }
         }
         obj.checkRename();
-        int id = obj.getId();
-        lockMeta(session);
-        removeMeta(session, id); //调用了两次，updateWithChildren=>update=>removeMeta
+//<<<<<<< HEAD
+//        int id = obj.getId();
+//        lockMeta(session);
+//        removeMeta(session, id); //调用了两次，updateWithChildren=>update=>removeMeta
+//=======
         map.remove(obj.getName());
         obj.rename(newName);
         map.put(newName, obj);
@@ -1845,7 +2033,7 @@ public class Database implements DataHandler {
             return null;
         default:
         }
-        HashSet<DbObject> set = New.hashSet();
+        HashSet<DbObject> set = new HashSet<>();
         for (Table t : getAllTablesAndViews(false)) {
             if (except == t) {
                 continue;
@@ -1914,7 +2102,7 @@ public class Database implements DataHandler {
     }
 
     /**
-     * Check if this database disk-based.
+     * Check if this database is disk-based.
      *
      * @return true if it is disk-based, false it it is in-memory only.
      */
@@ -1935,8 +2123,8 @@ public class Database implements DataHandler {
         if (pageStore != null) {
             pageStore.getCache().setMaxMemory(kb);
         }
-        if (mvStore != null) {
-            mvStore.setCacheSize(Math.max(1, kb));
+        if (store != null) {
+            store.setCacheSize(Math.max(1, kb));
         }
     }
 
@@ -1979,7 +2167,7 @@ public class Database implements DataHandler {
         if (readOnly) {
             throw DbException.get(ErrorCode.DATABASE_IS_READ_ONLY);
         }
-        if (fileLockMethod == FileLock.LOCK_SERIALIZED) {
+        if (fileLockMethod == FileLockMethod.SERIALIZED) {
             if (!reconnectChangePending) {
                 throw DbException.get(ErrorCode.DATABASE_IS_READ_ONLY);
             }
@@ -1997,9 +2185,9 @@ public class Database implements DataHandler {
             // TODO check if MIN_WRITE_DELAY is a good value
             flushOnEachCommit = writeDelay < Constants.MIN_WRITE_DELAY;
         }
-        if (mvStore != null) {
+        if (store != null) {
             int millis = value < 0 ? 0 : value;
-            mvStore.getStore().setAutoCommitDelay(millis);
+            store.getMvStore().setAutoCommitDelay(millis);
         }
     }
 
@@ -2009,11 +2197,11 @@ public class Database implements DataHandler {
 
     public void setRetentionTime(int value) {
         retentionTime = value;
-        if (mvStore != null) {
-            mvStore.getStore().setRetentionTime(value);
+        if (store != null) {
+            store.getMvStore().setRetentionTime(value);
         }
     }
-    
+
     public void setAllowBuiltinAliasOverride(boolean b) {
         allowBuiltinAliasOverride = b;
     }
@@ -2021,7 +2209,7 @@ public class Database implements DataHandler {
     public boolean isAllowBuiltinAliasOverride() {
         return allowBuiltinAliasOverride;
     }
-    
+
     /**
      * Check if flush-on-each-commit is enabled.
      *
@@ -2037,8 +2225,8 @@ public class Database implements DataHandler {
      * @return the list
      */
     public ArrayList<InDoubtTransaction> getInDoubtTransactions() {
-        if (mvStore != null) {
-            return mvStore.getInDoubtTransactions();
+        if (store != null) {
+            return store.getInDoubtTransactions();
         }
         return pageStore == null ? null : pageStore.getInDoubtTransactions();
     }
@@ -2053,8 +2241,8 @@ public class Database implements DataHandler {
         if (readOnly) {
             return;
         }
-        if (mvStore != null) {
-            mvStore.prepareCommit(session, transaction);
+        if (store != null) {
+            store.prepareCommit(session, transaction);
             return;
         }
         if (pageStore != null) {
@@ -2080,28 +2268,30 @@ public class Database implements DataHandler {
     }
 
     private void throwLastBackgroundException() {
-        if (backgroundException != null) {
-            // we don't care too much about concurrency here,
-            // we just want to make sure the exception is _normally_
-            // not just logged to the .trace.db file
-            DbException b = backgroundException;
-            backgroundException = null;
-            if (b != null) {
-                // wrap the exception, so we see it was thrown here
-                throw DbException.get(b.getErrorCode(), b, b.getMessage());
-            }
+        DbException b = backgroundException.getAndSet(null);
+        if (b != null) {
+            // wrap the exception, so we see it was thrown here
+            throw DbException.get(b.getErrorCode(), b, b.getMessage());
         }
     }
 
     public void setBackgroundException(DbException e) {
-        if (backgroundException == null) {
-            backgroundException = e;
+        if (backgroundException.compareAndSet(null, e)) {
             TraceSystem t = getTraceSystem();
             if (t != null) {
                 t.getTrace(Trace.DATABASE).error(e, "flush");
             }
         }
     }
+
+    public Throwable getBackgroundException() {
+        IllegalStateException exception = store.getMvStore().getPanicException();
+        if(exception != null) {
+            return exception;
+        }
+        return backgroundException.getAndSet(null);
+    }
+
 
     /**
      * Flush all pending changes to the transaction log.
@@ -2113,11 +2303,11 @@ public class Database implements DataHandler {
         if (pageStore != null) {
             pageStore.flushLog();
         }
-        if (mvStore != null) {
+        if (store != null) {
             try {
-                mvStore.flush();
+                store.flush();
             } catch (RuntimeException e) {
-                backgroundException = DbException.convert(e);
+                backgroundException.compareAndSet(null, DbException.convert(e));
                 throw e;
             }
         }
@@ -2133,7 +2323,7 @@ public class Database implements DataHandler {
         } else {
             try {
                 eventListener = (DatabaseEventListener)
-                        JdbcUtils.loadUserClass(className).newInstance();
+                        JdbcUtils.loadUserClass(className).getDeclaredConstructor().newInstance();
                 String url = databaseURL;
                 if (cipher != null) {
                     url += ";CIPHER=" + cipher;
@@ -2191,8 +2381,8 @@ public class Database implements DataHandler {
         if (readOnly) {
             return;
         }
-        if (mvStore != null) {
-            mvStore.sync();
+        if (store != null) {
+            store.sync();
         }
         if (pageStore != null) {
             pageStore.sync();
@@ -2218,13 +2408,13 @@ public class Database implements DataHandler {
     public void setLockMode(int lockMode) {
         switch (lockMode) {
         case Constants.LOCK_MODE_OFF:
-            if (multiThreaded) {
-                // currently the combination of LOCK_MODE=0 and MULTI_THREADED
-                // is not supported. also see code in
+            if (multiThreaded && !isMVStore()) {
+                // Currently the combination of MV_STORE=FALSE, LOCK_MODE=0 and
+                // MULTI_THREADED=TRUE is not supported. Also see code in
                 // JdbcDatabaseMetaData#supportsTransactionIsolationLevel(int)
                 throw DbException.get(
                         ErrorCode.UNSUPPORTED_SETTING_COMBINATION,
-                        "LOCK_MODE=0 & MULTI_THREADED");
+                        "MV_STORE=FALSE & LOCK_MODE=0 & MULTI_THREADED=TRUE");
             }
             break;
         case Constants.LOCK_MODE_READ_COMMITTED:
@@ -2241,7 +2431,7 @@ public class Database implements DataHandler {
         return lockMode;
     }
 
-    public synchronized void setCloseDelay(int value) {
+    public void setCloseDelay(int value) {
         this.closeDelay = value;
     }
 
@@ -2376,12 +2566,12 @@ public class Database implements DataHandler {
     }
 
     /**
-     * Check if multi version concurrency is enabled for this database.
+     * Check if MVStore backend is used for this database.
      *
-     * @return true if it is enabled
+     * @return {@code true} for MVStore, {@code false} for PageStore
      */
-    public boolean isMultiVersion() {
-        return multiVersion;
+    public boolean isMVStore() {
+        return dbSettings.mvStore;
     }
 
     /**
@@ -2411,22 +2601,27 @@ public class Database implements DataHandler {
 
     public void setMultiThreaded(boolean multiThreaded) {
         if (multiThreaded && this.multiThreaded != multiThreaded) {
-        	//不允许类似这样同时设置MULTI_THREADED和MVCC为true
-        	//prop.setProperty("MULTI_THREADED", "true");
-    		//prop.setProperty("MVCC", "true");
-            if (multiVersion && mvStore == null) {
-                // currently the combination of MVCC and MULTI_THREADED is not
-                // supported
+//<<<<<<< HEAD
+//        	//不允许类似这样同时设置MULTI_THREADED和MVCC为true
+//        	//prop.setProperty("MULTI_THREADED", "true");
+//    		//prop.setProperty("MVCC", "true");
+//            if (multiVersion && mvStore == null) {
+//                // currently the combination of MVCC and MULTI_THREADED is not
+//                // supported
+//                throw DbException.get(
+//                        ErrorCode.UNSUPPORTED_SETTING_COMBINATION,
+//                        "MVCC & MULTI_THREADED");
+//            }
+//            if (lockMode == 0) {
+//                // currently the combination of LOCK_MODE=0 and MULTI_THREADED
+//                // is not supported
+//=======
+            if (lockMode == Constants.LOCK_MODE_OFF && !isMVStore()) {
+                // Currently the combination of MV_STORE=FALSE, LOCK_MODE=0 and
+                // MULTI_THREADED=TRUE is not supported.
                 throw DbException.get(
                         ErrorCode.UNSUPPORTED_SETTING_COMBINATION,
-                        "MVCC & MULTI_THREADED");
-            }
-            if (lockMode == 0) {
-                // currently the combination of LOCK_MODE=0 and MULTI_THREADED
-                // is not supported
-                throw DbException.get(
-                        ErrorCode.UNSUPPORTED_SETTING_COMBINATION,
-                        "LOCK_MODE=0 & MULTI_THREADED");
+                        "MV_STORE=FALSE & LOCK_MODE=0 & MULTI_THREADED=TRUE");
             }
         }
         this.multiThreaded = multiThreaded;
@@ -2441,7 +2636,7 @@ public class Database implements DataHandler {
     }
 
     public Session getExclusiveSession() {
-        return exclusiveSession;
+        return exclusiveSession.get();
     }
 
     /**
@@ -2451,7 +2646,7 @@ public class Database implements DataHandler {
      * @param closeOthers whether other sessions are closed
      */
     public void setExclusiveSession(Session session, boolean closeOthers) {
-        this.exclusiveSession = session;
+        this.exclusiveSession.set(session);
         if (closeOthers) {
             closeAllSessionsException(session);
         }
@@ -2497,7 +2692,7 @@ public class Database implements DataHandler {
     public TableLinkConnection getLinkConnection(String driver, String url,
             String user, String password) {
         if (linkConnections == null) {
-            linkConnections = New.hashMap();
+            linkConnections = new HashMap<>();
         }
         return TableLinkConnection.open(linkConnections, driver, url, user,
                 password, dbSettings.shareLinkedConnections);
@@ -2512,6 +2707,7 @@ public class Database implements DataHandler {
      * Immediately close the database.
      */
     public void shutdownImmediately() {
+        closing = true;
         setPowerOffCount(1);
         try {
             checkPowerOff();
@@ -2528,8 +2724,8 @@ public class Database implements DataHandler {
 
     public PageStore getPageStore() {
         if (dbSettings.mvStore) {
-            if (mvStore == null) {
-                mvStore = MVTableEngine.init(this);
+            if (store == null) {
+                store = MVTableEngine.init(this);
             }
             return null;
         }
@@ -2539,7 +2735,7 @@ public class Database implements DataHandler {
             if (pageSize != Constants.DEFAULT_PAGE_SIZE) {
                 pageStore.setPageSize(pageSize);
             }
-            if (!readOnly && fileLockMethod == FileLock.LOCK_FS) {
+            if (!readOnly && fileLockMethod == FileLockMethod.FS) {
                 pageStore.setLockFile(true);
             }
             pageStore.setLogMode(logMode); //默认是LOG_MODE_SYNC
@@ -2549,7 +2745,8 @@ public class Database implements DataHandler {
     }
 
     /**
-     * Get the first user defined table.
+     * Get the first user defined table, excluding the LOB_BLOCKS table that the
+     * Recover tool creates.
      *
      * @return the table or null if no table is defined
      */
@@ -2558,6 +2755,11 @@ public class Database implements DataHandler {
             if (table.getCreateSQL() != null) {
                 if (table.isHidden()) {
                     // LOB tables
+                    continue;
+                }
+                // exclude the LOB_MAP that the Recover tool creates
+                if (table.getName().equals("LOB_BLOCKS") && table.getSchema()
+                        .getName().equals("INFORMATION_SCHEMA")) {
                     continue;
                 }
                 return table;
@@ -2575,7 +2777,7 @@ public class Database implements DataHandler {
      * @return true if reconnecting is required
      */
     public boolean isReconnectNeeded() {
-        if (fileLockMethod != FileLock.LOCK_SERIALIZED) {
+        if (fileLockMethod != FileLockMethod.SERIALIZED) {
             return false;
         }
         if (reconnectChangePending) {
@@ -2629,14 +2831,14 @@ public class Database implements DataHandler {
      * the .lock.db file.
      */
     public void checkpointIfRequired() {
-        if (fileLockMethod != FileLock.LOCK_SERIALIZED ||
+        if (fileLockMethod != FileLockMethod.SERIALIZED ||
                 readOnly || !reconnectChangePending || closing) {
             return;
         }
         long now = System.nanoTime();
         if (now > reconnectCheckNext + reconnectCheckDelayNs) {
             if (SysProperties.CHECK && checkpointAllowed < 0) {
-                DbException.throwInternalError("" + checkpointAllowed);
+                DbException.throwInternalError(Integer.toString(checkpointAllowed));
             }
             synchronized (reconnectSync) {
                 if (checkpointAllowed > 0) {
@@ -2658,7 +2860,7 @@ public class Database implements DataHandler {
     }
 
     public boolean isFileLockSerialized() {
-        return fileLockMethod == FileLock.LOCK_SERIALIZED;
+        return fileLockMethod == FileLockMethod.SERIALIZED;
     }
 
     private void flushSequences() {
@@ -2678,8 +2880,8 @@ public class Database implements DataHandler {
                     pageStore.checkpoint();
                 }
             }
-            if (mvStore != null) {
-                mvStore.flush();
+            if (store != null) {
+                store.flush();
             }
         }
         getTempFileDeleter().deleteUnused();
@@ -2692,7 +2894,7 @@ public class Database implements DataHandler {
      *          false if another connection was faster
      */
     public boolean beforeWriting() {
-        if (fileLockMethod != FileLock.LOCK_SERIALIZED) {
+        if (fileLockMethod != FileLockMethod.SERIALIZED) {
             return true;
         }
         while (checkpointRunning) {
@@ -2706,7 +2908,7 @@ public class Database implements DataHandler {
             if (reconnectModified(true)) {
                 checkpointAllowed++;
                 if (SysProperties.CHECK && checkpointAllowed > 20) {
-                    throw DbException.throwInternalError("" + checkpointAllowed);
+                    throw DbException.throwInternalError(Integer.toString(checkpointAllowed));
                 }
                 return true;
             }
@@ -2721,14 +2923,14 @@ public class Database implements DataHandler {
      * This method is called after updates are finished.
      */
     public void afterWriting() {
-        if (fileLockMethod != FileLock.LOCK_SERIALIZED) {
+        if (fileLockMethod != FileLockMethod.SERIALIZED) {
             return;
         }
         synchronized (reconnectSync) {
             checkpointAllowed--;
         }
         if (SysProperties.CHECK && checkpointAllowed < 0) {
-            throw DbException.throwInternalError("" + checkpointAllowed);
+            throw DbException.throwInternalError(Integer.toString(checkpointAllowed));
         }
     }
 
@@ -2798,7 +3000,7 @@ public class Database implements DataHandler {
             this.logMode = log;
             pageStore.setLogMode(log);
         }
-        if (mvStore != null) {
+        if (store != null) {
             this.logMode = log;
         }
     }
@@ -2807,7 +3009,7 @@ public class Database implements DataHandler {
         if (pageStore != null) {
             return pageStore.getLogMode();
         }
-        if (mvStore != null) {
+        if (store != null) {
             return logMode;
         }
         return PageStore.LOG_MODE_OFF;
@@ -2819,10 +3021,6 @@ public class Database implements DataHandler {
 
     public void setDefaultTableType(int defaultTableType) {
         this.defaultTableType = defaultTableType;
-    }
-
-    public void setMultiVersion(boolean multiVersion) {
-        this.multiVersion = multiVersion;
     }
 
     public DbSettings getSettings() {
@@ -2850,9 +3048,7 @@ public class Database implements DataHandler {
      * @return the hash map
      */
     public <V> ConcurrentHashMap<String, V> newConcurrentStringMap() {
-        return dbSettings.databaseToUpper ?
-                new NullableKeyConcurrentMap<V>() :
-                new CaseInsensitiveConcurrentMap<V>();
+        return new NullableKeyConcurrentMap<>(!dbSettings.databaseToUpper);
     }
 
     /**
@@ -2864,13 +3060,7 @@ public class Database implements DataHandler {
      * @return true if they match
      */
     public boolean equalsIdentifiers(String a, String b) {
-        if (a == b || a.equals(b)) {
-            return true;
-        }
-        if (!dbSettings.databaseToUpper && a.equalsIgnoreCase(b)) {
-            return true;
-        }
-        return false;
+        return a.equals(b) || (!dbSettings.databaseToUpper && a.equalsIgnoreCase(b));
     }
 
     @Override
@@ -2908,7 +3098,7 @@ public class Database implements DataHandler {
                         !serializerName.equals("null")) {
                     try {
                         javaObjectSerializer = (JavaObjectSerializer)
-                                JdbcUtils.loadUserClass(serializerName).newInstance();
+                                JdbcUtils.loadUserClass(serializerName).getDeclaredConstructor().newInstance();
                     } catch (Exception e) {
                         throw DbException.convert(e);
                     }
@@ -2937,7 +3127,7 @@ public class Database implements DataHandler {
         TableEngine engine = tableEngines.get(tableEngine);
         if (engine == null) {
             try {
-                engine = (TableEngine) JdbcUtils.loadUserClass(tableEngine).newInstance();
+                engine = (TableEngine) JdbcUtils.loadUserClass(tableEngine).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw DbException.convert(e);
             }
@@ -2946,4 +3136,23 @@ public class Database implements DataHandler {
         return engine;
     }
 
+    /**
+     * get authenticator for database users
+     * @return authenticator set for database
+     */
+    public Authenticator getAuthenticator() {
+        return authenticator;
+    }
+
+    /**
+     * Set current database authenticator
+     *
+     * @param authenticator = authenticator to set, null to revert to the Internal authenticator
+     */
+    public void setAuthenticator(Authenticator authenticator) {
+        if (authenticator!=null) {
+            authenticator.init(this);
+        }
+        this.authenticator=authenticator;
+    }
 }
